# lens

./: README.md
client/: tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/components/: focusedtask.component.tsx  inspect.component.tsx  sort.component.tsx
client/app/components/tasklistcomponents/: nosort.component.tsx  tagsort.component.tsx  task.component.tsx  tasksection.component.tsx
client/app/focus/: page.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
server/: app.py  models.py  pyproject.toml  taskrouter.py
server/routers/: focus.py  modify.py  query.py  tag.py
web/: package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx  prioritycolors.tsx
web/app/components/: filter.component.tsx  focusedtask.component.tsx  inspect.component.tsx  sort.component.tsx  tasklist.component.tsx  view.component.tsx
web/app/components/inspectcomponents/: add.component.tsx  edit.component.tsx  view.component.tsx
web/app/components/tasklistcomponents/: nosort.component.tsx  prioritysort.component.tsx  tagsort.component.tsx  task.component.tsx  tasksection.component.tsx
windows/: package.json  tailwind.config.ts
windows/app/: globals.css  page.tsx
windows/app/components/: filter.component.tsx  focusedtask.component.tsx  tasklist.component.tsx
windows/app/components/inspectcomponents/: add.component.tsx  edit.component.tsx  view.component.tsx
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: main.rs
(+1 files in other folders)
