[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Carl Zhang <zhang.carl.x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.108.0"}
uvicorn = "^0.25.0"
pymongo = {extras = ["all"], version = "^4.6.1"}
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
